[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymemgpt"
version = "0.2"
description = "Teaching LLMs memory management for unbounded context"
authors = [
    {name = "Charles Packer", email = "contact@charlespacker.com"},
    {name = "Vivian Fang", email = "hi@vivi.sh"},
    {name = "Sarah Wooders", email = "sarahwooders@gmail.com"},
    {name = "Shishir Patil", email = "shishirpatil@berkeley.edu"},
    {name = "Kevin Lin", email = "kevinlin@eecs.berkeley.edu"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "colorama == 0.4.6",
    "demjson3 == 3.0.6",
    "llama_index == 0.8.53.post3",
    "openai == 0.28.1",
    "prettytable == 3.9.0",
    "PyMuPDF == 1.23.5",
    "pytz == 2023.3.post1",
    "questionary == 2.0.1",
    "rich == 13.6.0",
    "tiktoken == 0.5.1",
    "timezonefinder == 6.2.0",
    "tqdm == 4.66.1",
    "typer [all] == 0.9.0",
]

[project.optional-dependencies]
legacy = [
    "faiss-cpu == 1.7.4",
    "pymupdf == 1.23.5",
]
local = [
    "llama_index [local-models] == 0.8.53.post3",
]
postgres = [
    "pgvector == 0.2.3",
    "psycopg == 3.1.12",
    "psycopg-binary == 3.1.12",
]

[project.scripts]
memgpt = "memgpt.main:app"

[tool.setuptools.packages.find]
where = ["memgpt"]

[project.urls]
"Homepage" = "https://github.com/cpacker/MemGPT"
"Bug Reports" = "https://github.com/cpacker/MemGPT/issues"
"Discord Server" = "https://discord.gg/9GEQrxmVyE"
